Sprint 20: CI Offload — eval-sprint.yml + local self-battle
Workstream A deliverables:
- eval-sprint.yml: 16-opponent eval in CI (4 matrix runners × 4 opponents)
  - Build robot JAR → parallel battles → aggregate summary.json
  - Self-battle sanity check (48-52% band)
  - Only summary.json (~2KB) uploaded as artifact (data-transfer policy)
  - Per-opponent score table posted to GITHUB_STEP_SUMMARY
  - Triggers on push to main (robot/core/pipeline paths) or manual dispatch
- local-pipeline.ps1: -IncludeSelfBattle flag for local parity
- Squad state: ceremonies, decisions, agent history updates